Replace `sbrk` with `grow_heap` hostcall

--- a/preamble.tex
+++ b/preamble.tex
@@ -795,7 +795,8 @@
 \newcommand*{\segoff}{\varsigma}
 \newcommand*{\execst}{\varepsilon}
 
-
+\newcommand*{\rnp}[1]{P(#1)}
+\newcommand*{\rnq}[1]{Z(#1)}
 \newcommand*{\contextmutator}[1]{\Omega\ang{#1}}
 
 %%%%%%%%%%%%
