Clean up PVM blob and JAM blob variable names

--- a/preamble.tex
+++ b/preamble.tex
@@ -404,7 +404,7 @@
 %%%%%%%%%%%%
 % Named types (blackboard)
 \newcommand*{\pvmguest}{\mathbb{G}}
-\newcommand*{\pg¬code}{\mathbf{p}}
+\newcommand*{\pg¬code}{\pvm¬blob}
 \newcommand*{\pg¬ram}{\mathbf{u}}
 \newcommand*{\pg¬pc}{i}
 
@@ -787,6 +787,8 @@
 %%%%%%%%%%%%
 % PVM-SPECIFIC ITEMS
 
+\newcommand*{\jam¬blob}{\mathfrak{j}}
+\newcommand*{\pvm¬blob}{\mathfrak{p}}
 \newcommand*{\gascounter}{\varrho}
 \newcommand*{\registers}{\varphi}
 \newcommand*{\memory}{\mu}
