Make the provenance of `o` and `s` explicit in `grow_heap` hostcall

--- a/text/pvm_invocations.tex
+++ b/text/pvm_invocations.tex
@@ -320,6 +320,8 @@ Other than the gas-counter which is explicitly defined, elements of \textsc{pvm}
     % It returns the number of accessible pages in the RW data region, regardless of whether
     % anything has changed.
     %
+    % Extract the RO data size and the stack size from the JAM program blob.
+    \using (\mathbf{o}, s) &\mapsto \jam¬blob \text{ according to eq. \ref{eq:conditions}} \\
     % Page index of the start of the RW data region.
     \using a &= \frac{2\Cpvminitzonesize + \rnq{\len{\mathbf{o}}}}{\Cpvmpagesize} \\
     % Page index plus one of the last possible RW data region page.
