--- a/text/pvm.tex
+++ b/text/pvm.tex
@@ -34,7 +34,7 @@
 \newcommand*{\startofbasicblock}{\mathfrak{L}}
 \newcommand*{\gaschargedflag}{\tilde{\gascounter}}
 
-We declare the general \textsc{pvm} function $\Psi$. We assume a single-step invocation function define $\Psi_1$ and define the full \textsc{pvm} recursively as a sequence of such mutations up until the single-step mutation results in a halting condition. We additionally define the function $\deblob$ which extracts the instruction data, opcode bitmask and dynamic jump table from a PVM program blob:
+We declare the general \textsc{pvm} function $\Psi$. We assume a single-step invocation function define $\Psi_1$ and define the full \textsc{pvm} recursively as a sequence of such mutations up until the single-step mutation results in a halting condition. We additionally define the function $\deblob$ which extracts the instruction data, opcode bitmask and dynamic jump table from a \textsc{pvm} program blob:
 \begin{align}
   \Psi^*&\colon \abracegroup{
     \tuple{\blob, \pvmreg, \gas, \bool, \regs, \ram} &\to \tuple{\set{\halt, \panic, \oog} \cup \set{\fault, \host} \times \pvmreg, \pvmreg, \signedgas, \bool, \regs, \ram}\\
@@ -67,7 +67,7 @@ In the case of a final halt, either through panic or success, the instruction co
 
 \subsection{Instructions, Opcodes and Skip-distance}
 
-The PVM program blob $\pvm¬blob$ is split into a series of octets which make up the \emph{instruction data} $\mathbf{c}$ and the \emph{opcode bitmask} $\mathbf{k}$ as well as the \emph{dynamic jump table}, $\mathbf{j}$. The former two imply an instruction sequence, and by extension a \emph{basic-block sequence}, itself a sequence of indices of the instructions which follow a \emph{block-termination} instruction.
+The \textsc{pvm} program blob $\pvm¬blob$ is split into a series of octets which make up the \emph{instruction data} $\mathbf{c}$ and the \emph{opcode bitmask} $\mathbf{k}$ as well as the \emph{dynamic jump table}, $\mathbf{j}$. The former two imply an instruction sequence, and by extension a \emph{basic-block sequence}, itself a sequence of indices of the instructions which follow a \emph{block-termination} instruction.
 
 The latter, dynamic jump table, is a sequence of indices into the instruction data blob and is indexed into when dynamically-computed jumps are taken. It is encoded as a sequence of natural numbers (i.e. non-negative integers) each encoded with the same length in octets. This length, term $z$ above, is itself encoded prior.
 
@@ -769,7 +769,7 @@ With $\Phi_H$, host-calls (\ie \token{ecalli} instructions) are in effect handle
 \subsection{Standard Program Initialization}\label{sec:standardprograminit}
 The software programs which will run in each of the four instances where the \textsc{pvm} is utilized in the main document have a very typical setup pattern characteristic of an output of a compiler and linker. This means that \textsc{ram} has sections for program-specific read-only data, read-write (heap) data and the stack. An adjunct to this, very typical of our usage patterns is an extra read-only section via which invocation-specific data may be passed (\ie arguments). It thus makes sense to define this properly in a single initializer function. These sections are quantized into \emph{major zones}, and one major zone is always left unallocated between sections in order to reduce accidental overrun. Sections are padded with zeroes to the nearest \textsc{pvm} memory page boundary.
 
-We thus define the standard JAM program blob format $\jam¬blob$, which includes not only the raw PVM program blob $\pvm¬blob$, but also information on the state of the \textsc{ram} at program start. Given JAM program blob $\jam¬blob$ and argument data $\mathbf{a}$, we can decode the PVM program blob $\pvm¬blob$, registers $\registers$, and \textsc{ram} $\mem$ by invoking the standard initialization function $Y(\jam¬blob, \mathbf{a})$:
+We thus define the standard JAM program blob format $\jam¬blob$, which includes not only the raw \textsc{pvm} program blob $\pvm¬blob$, but also information on the state of the \textsc{ram} at program start. Given JAM program blob $\jam¬blob$ and argument data $\mathbf{a}$, we can decode the \textsc{pvm} program blob $\pvm¬blob$, registers $\registers$, and \textsc{ram} $\mem$ by invoking the standard initialization function $Y(\jam¬blob, \mathbf{a})$:
 \begin{equation}
 Y\colon\abracegroup{
   \tuple{\blob, \blob[:\Cpvminitinputsize]} &\to \tuple{\blob, \regs, \ram}? \\
