Review comment: fix type of Psi_H

--- a/text/pvm.tex
+++ b/text/pvm.tex
@@ -735,7 +735,7 @@ An extended version of the \textsc{pvm} invocation which is able to progress an 
 \begin{align}
   &\Psi_H^*\colon \abracegroup{
     \tuple{\begin{aligned}
-      &\blob, \pvmreg, \gas, \regs,\\&\ram, \bool, \contextmutator{X}, X
+      &\blob, \pvmreg, \gas, \bool, \regs,\\&\ram, \contextmutator{X}, X
     \end{aligned}
     }
     &\to
